# CNN-2D-X-Ray-Catheter-Detection

./: .gitignore  LICENSE.txt  README.md  globalVariables.bat  globalVariables.sh  localProjectPath.bat  localProjectPath.sh
cpp/: CMakeLists.txt  buildConfig.bat  buildConfig.sh  buildConfigRedirect.bat  compile.bat  compile.sh
cpp/common/maths/: Maths.h  Vector.h
cpp/common/segmentation/: ExtractCenterline.cpp  ExtractCenterline.h
cpp/common/structure/: Branch.cpp  Branch.h  PtList.cpp  PtList.h  Tree.cpp  Tree.h
cpp/common/util/: File.cpp  File.h  Util.cpp  Util.h
cpp/src/PyTACELib/: PythonWrapper.cpp
cpp/src/TACE/: PathExtraction2D.cpp  PathExtraction2D.h  main.cpp
docs/generateImages/: GenerateImages.py
examples/generateTrainTestDataset/: GenerateTrainTestDataset.bat  GenerateTrainTestDataset.py  GenerateTrainTestDataset.sh  GenerateTrainTestDatasetRedirect.bat
examples/testCatheterSegmentation/: TestCatheterSegmentation.py  TestCatheterSegmentationRedirect.bat
examples/trainCatheterSegmentation/: TrainCatheterSegmentation.py  TrainCatheterSegmentationRedirect.sh
python/common/: DataAugmentation.py  DataObject.py  File.py  FluoroDataObject.py  FluoroExtraction.py  NnetsX.py  System.py  Util.py  UtilImage.py
tests/: DebugCppExtractCenterline.bat  DebugCppExtractCenterline.py
tests/all/: test.bat  test.sh  testAll.bat  testAll.sh  testAllRedirect.bat  testAllRedirect.sh
tests/debugCppExtractCenterline/: DebugCppExtractCenterline.bat  DebugCppExtractCenterline.py
userSpecific/: buildConfig.default.bat  buildConfig.default.sh  globalVariables.default.bat  globalVariables.default.sh
